# pokemon-db-maker

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml
command/: docker.sh
output/: pokemon_db.csv  pokemon_db.json
src/: argument_parser.py  convert_csv2json.py  convert_csv_to_json.py  crawler.py  main.py  pokemon.py  scraper.py  settings.py  utils.py
